cname file change

--- a/presskit/index.html
+++ b/presskit/index.html
@@ -44,7 +44,7 @@
             <h2><span><b>May 6th-8th, 2016</b></span><br /><span>at Christ School Ground</span><br /><span>Bengaluru</span></h2>
           </div>
         </div>
-        <a href="/" class="button large rsvp" target="_blank">Book Tickets</a>
+        <a href="/" class="button large rsvp" target="_blank">Homepage</a>
       </div>
     </div>
     
