--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Hero Section -->
     <div id="hero">
       <div class="photo">
-        <a href="/presskit" class="button large rsvp" target="_blank">Book Tickets</a>
+        <a href="/presskit" class="button large rsvp" target="_blank">PRESS KIT</a>
       </div>
       <div class="container">
         <h3 class="tagline">NECAB &<br> Blue Ocean Theatre Presents</h3>
