--- a/presskit/index.html
+++ b/presskit/index.html
@@ -45,7 +45,7 @@
             <h2><span><b>May 6th-8th, 2016</b></span><br /><span>at Christ School Ground</span><br /><span>Bengaluru</span></h2>
           </div>
         </div>
-        <a href="/" class="button large rsvp" target="_blank">Home</a>
+        <a href="/" class="button large rsvp" target="_blank">HOME PAGE</a>
       </div>
     </div>
     
