--- a/presskit/index.html
+++ b/presskit/index.html
@@ -34,7 +34,7 @@
     <!-- Hero Section -->
     <div id="hero">
       <div class="photo">
-        <a href="/" class="button large rsvp" target="_blank">Home</a>
+        <a href="/" class="button large rsvp" target="_blank">HOME PAGE</a>
       </div>
       <div class="container">
         <h3 class="tagline">NECAB &<br> Blue Ocean Theatre Presents</h3>
