--- a/presskit/index.html
+++ b/presskit/index.html
@@ -34,7 +34,7 @@
     <!-- Hero Section -->
     <div id="hero">
       <div class="photo">
-        <a href="/" class="button large rsvp" target="_blank">HOME PAGE</a>
+        <a href="/" class="button large rsvp">HOME PAGE</a>
       </div>
       <div class="container">
         <h3 class="tagline">NECAB &<br> Blue Ocean Theatre Presents</h3>
@@ -45,7 +45,7 @@
             <h2><span><b>May 6th-8th, 2016</b></span><br /><span>at Christ School Ground</span><br /><span>Bengaluru</span></h2>
           </div>
         </div>
-        <a href="/" class="button large rsvp" target="_blank">HOME PAGE</a>
+        <a href="/" class="button large rsvp">HOME PAGE</a>
       </div>
     </div>
     
