Temporary fix for presskit

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2><span><b>May 6th-8th, 2016</b></span><br /><span>at Christ School Ground</span><br /><span>Bengaluru</span></h2>
           </div>
         </div>
-        <a href="/presskit" class="button large rsvp">PRESS KIT</a>
+        <a href="/presskit#presskit" class="button large rsvp">PRESS KIT</a>
       </div>
     </div>
     
@@ -177,4 +177,5 @@
     </div>
   </div>
   
-</body></html>
+</body>
+</html>
