--- a/presskit/index.html
+++ b/presskit/index.html
@@ -52,7 +52,7 @@
     <div class="bg-holder">
       <div id="about" class="container">
         <div class="nine columns">
-          <h3 class="o-section__title">Press Kit</h3>
+          <h3 class="o-section__title" id="presskit">Press Kit</h3>
           <iframe src="https://drive.google.com/embeddedfolderview?id=0B0vuXpLsn8pZbU5WWFlXb0hzbTA#list" width="700" height="500" frameborder="0"></iframe>
         </div>    
       </div>
