--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="container">
       <div class="row">
         <div class="ten columns">
-          <p class="u-pull-left">(c) Namma Khasak</p>
+          <p class="u-pull-left"><span class="copyleft">&copy;</span> Namma Khasak</p>
         </div>
         <div class="two columns">
           <ul class="socials">
