--- a/presskit/index.html
+++ b/presskit/index.html
@@ -64,7 +64,7 @@
     <div class="container">
       <div class="row">
         <div class="ten columns">
-          <p class="u-pull-left">(c) Namma Khasak</p>
+          <p class="u-pull-left"><span class="copyleft">&copy;</span> Namma Khasak</p>
         </div>
         <div class="two columns">
           <ul class="socials">
@@ -84,4 +84,5 @@
     </div>
   </div>
   
-</body></html>
+</body>
+</html>
