--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Hero Section -->
     <div id="hero">
       <div class="photo">
-        <a href="/presskit" class="button large rsvp" >PRESS KIT</a>
+        <a href="/presskit/index.html#presskit" class="button large rsvp" >PRESS KIT</a>
       </div>
       <div class="container">
         <h3 class="tagline">NECAB &<br> Blue Ocean Theatre Presents</h3>
@@ -44,7 +44,7 @@
             <h2><span><b>May 6th-8th, 2016</b></span><br /><span>at Christ School Ground</span><br /><span>Bengaluru</span></h2>
           </div>
         </div>
-        <a href="/presskit#presskit" class="button large rsvp">PRESS KIT</a>
+        <a href="/presskit/index.html#presskit" class="button large rsvp">PRESS KIT</a>
       </div>
     </div>
     
