Add facebook page link

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="two columns">
           <ul class="socials">
             <li class="six columns">
-              <a href="#">
+              <a href="https://www.facebook.com/nammakhasak">
                 <img class="icon fb" width="30px" src="./images/f.svg" alt="facebook">
               </a>
             </li>
