--- a/presskit/index.html
+++ b/presskit/index.html
@@ -69,7 +69,7 @@
         <div class="two columns">
           <ul class="socials">
             <li class="six columns">
-              <a href="#">
+              <a href="https://www.facebook.com/nammakhasak">
                 <img class="icon fb" width="30px" src="../images/f.svg" alt="facebook">
               </a>
             </li>
