--- a/presskit/index.html
+++ b/presskit/index.html
@@ -4,7 +4,7 @@
     <!-- Basic Page Needs
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Namma Khasak : 'Khasakkinte Ithihasam' Drama by Deepan Sivaraman on 6,7,8 May 2016, at Christ School Groud, Bengaluru.</title>
+    <title>Namma Khasak : 'Khasakkinte Ithihasam' Drama by Deepan Sivaraman on 6,7,8 May 2016, at Christ School Ground, Bengaluru.</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Mobile Specific Metas
