--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Basic Page Needs
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Namma Khasak : 'Khasakkinte Ithihasam' Drama by Deepan Sivaraman on 6,7,8 May 2016, at Christ School Ground, Bengaluru.</title>
+    <title>Namma Khasak : 'Khasakkinte Ithihasam' Drama by Deepan Sivaraman on 6,7,8 May 2016, at Christ School Groud, Bengaluru.</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Mobile Specific Metas
@@ -33,7 +33,7 @@
     <!-- Hero Section -->
     <div id="hero">
       <div class="photo">
-        <a href="/presskit/index.html#presskit" class="button large rsvp" >PRESS KIT</a>
+        <a href="/presskit" class="button large rsvp" >PRESS KIT</a>
       </div>
       <div class="container">
         <h3 class="tagline">NECAB &<br> Blue Ocean Theatre Presents</h3>
@@ -44,7 +44,7 @@
             <h2><span><b>May 6th-8th, 2016</b></span><br /><span>at Christ School (ICSE) Ground</span><br /><span>Behind Christ University</span><br /><span>Bengaluru</span></h2>
           </div>
         </div>
-        <a href="/presskit/index.html#presskit" class="button large rsvp">PRESS KIT</a>
+        <a href="/presskit" class="button large rsvp">PRESS KIT</a>
       </div>
     </div>
     
@@ -66,7 +66,7 @@
           </span>
           <br>
           
-          The theater setup in an open-air arena on a large rectangular pit of loose earth with  extensive use of fire, soil, water, scent, sky , symbolic use of huge puppets and masks with real feel that allow audience to participate and experience the pleasures and tragedies that engulf in "Khasakh". The  vibrant scenographic experiences  of this play bring back ancestors from the legend of  Khasak  with their community atmosphere in a ritualistic and  philosophical plane to tell their tales of celebration of life, earth and myths. The director also perfectly knits the dramatic elements of Theyyam - an ancient ritual art form of worship  from North Kerala -into this production.</p>
+          The theater is setup in an open-air arena on a large rectangular pit of loose earth with  extensive use of fire, soil, water, scent, sky , symbolic use of huge puppets and masks with real feel that allow audience to participate and experience the pleasures and tragedies that engulf in "Khasakh". The  vibrant scenographic experiences  of this play bring back ancestors from the legend of  Khasak  with their community atmosphere in a ritualistic and  philosophical plane to tell their tales of celebration of life, earth and myths. The director also perfectly knits the dramatic elements of Theyyam - an ancient ritual art form of worship  from North Kerala -into this production.</p>
         </div>
       </div>
     </div>
@@ -157,12 +157,12 @@
     <div class="container">
       <div class="row">
         <div class="ten columns">
-          <p class="u-pull-left"><span class="copyleft">&copy;</span> Namma Khasak</p>
+          <p class="u-pull-left">(c) Namma Khasak</p>
         </div>
         <div class="two columns">
           <ul class="socials">
             <li class="six columns">
-              <a href="https://www.facebook.com/nammakhasak">
+              <a href="#">
                 <img class="icon fb" width="30px" src="./images/f.svg" alt="facebook">
               </a>
             </li>
@@ -177,5 +177,4 @@
     </div>
   </div>
   
-</body>
-</html>
+</body></html>
