Redoing changes in footer and presskit link. Blame hfactor.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Basic Page Needs
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Namma Khasak : 'Khasakkinte Ithihasam' Drama by Deepan Sivaraman on 6,7,8 May 2016, at Christ School Groud, Bengaluru.</title>
+    <title>Namma Khasak : 'Khasakkinte Ithihasam' Drama by Deepan Sivaraman on 6,7,8 May 2016, at Christ School Ground, Bengaluru.</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Mobile Specific Metas
@@ -33,7 +33,7 @@
     <!-- Hero Section -->
     <div id="hero">
       <div class="photo">
-        <a href="/presskit" class="button large rsvp" >PRESS KIT</a>
+        <a href="/presskit/index.html#presskit" class="button large rsvp" >PRESS KIT</a>
       </div>
       <div class="container">
         <h3 class="tagline">NECAB &<br> Blue Ocean Theatre Presents</h3>
@@ -44,7 +44,7 @@
             <h2><span><b>May 6th-8th, 2016</b></span><br /><span>at Christ School (ICSE) Ground</span><br /><span>Behind Christ University</span><br /><span>Bengaluru</span></h2>
           </div>
         </div>
-        <a href="/presskit" class="button large rsvp">PRESS KIT</a>
+        <a href="/presskit/index.html#presskit" class="button large rsvp">PRESS KIT</a>
       </div>
     </div>
     
@@ -157,12 +157,12 @@
     <div class="container">
       <div class="row">
         <div class="ten columns">
-          <p class="u-pull-left">(c) Namma Khasak</p>
+          <p class="u-pull-left"><span class="copyleft">&copy;</span> Namma Khasak</p>
         </div>
         <div class="two columns">
           <ul class="socials">
             <li class="six columns">
-              <a href="#">
+              <a href="https://www.facebook.com/nammakhasak">
                 <img class="icon fb" width="30px" src="./images/f.svg" alt="facebook">
               </a>
             </li>
@@ -177,4 +177,5 @@
     </div>
   </div>
   
-</body></html>
+</body>
+</html>
