--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <!-- Hero Section -->
     <div id="hero">
       <div class="photo">
-        <a href="/presskit/index.html#presskit" class="button large rsvp" >PRESS KIT</a>
+        <a href="/http://bit.ly/nammakhasak" class="button large rsvp" >BOOK TICKET</a>
       </div>
       <div class="container">
-        <h3 class="tagline">NECAB &<br> Blue Ocean Theatre Presents</h3>
+        <h3 class="tagline">NECAB &<br> Blue Ocean Theater Presents</h3>
         <h1>Khasakkinte Ithihasam</h1>
         <div class="row">
           <div class="twelve column left">            
@@ -44,7 +44,7 @@
             <h2><span><b>May 6th-8th, 2016</b></span><br /><span>at Christ School (ICSE) Ground</span><br /><span>Behind Christ University</span><br /><span>Bengaluru</span></h2>
           </div>
         </div>
-        <a href="/presskit/index.html#presskit" class="button large rsvp">PRESS KIT</a>
+        <a href="http://bit.ly/nammakhasak" class="button large rsvp">BOOK TICKET</a>
       </div>
     </div>
     
