--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Hero Section -->
     <div id="hero">
       <div class="photo">
-        <a href="/http://bit.ly/nammakhasak" class="button large rsvp" >BOOK TICKET</a>
+        <a href="http://bit.ly/nammakhasak" class="button large rsvp" >BOOK TICKET</a>
       </div>
       <div class="container">
         <h3 class="tagline">NECAB &<br> Blue Ocean Theater Presents</h3>
