--- a/index.html
+++ b/index.html
@@ -30,12 +30,23 @@
     <script src="js/main.js"></script> -->
   </head>
   <body>
+
     <!-- Hero Section -->
     <div id="hero">
       <div class="photo">
         <a href="http://bit.ly/nammakhasak" class="button large rsvp" >BOOK TICKET</a>
       </div>
       <div class="container">
+        <!-- Menu -->
+        <nav class="khasak-nav">
+          <a class="khasak-item active" href="/index.html">Home</a>
+          <a class="khasak-item" href="#about">About</a>
+          <a class="khasak-item" href="#organizers">Organizers</a>
+          <a class="khasak-item" href="#cause">Cause</a>
+          <a class="khasak-item" href="/presskit/index.html#presskit">Presskit</a>
+          <a class="khasak-item" href="https://www.facebook.com/nammakhasak">Facebook</a>
+          <a class="khasak-item" href="http://bit.ly/nammakhasak">Book Tickets</a>
+        </nav>
         <h3 class="tagline">NECAB &<br> Blue Ocean Theater Presents</h3>
         <h1>Khasakkinte Ithihasam</h1>
         <div class="row">
@@ -91,7 +102,7 @@
       </div>
     </div>
     
-    <div id="organisors" class="container">
+    <div id="organizers" class="container">
       <h3 class="o-section__title">Organizers</h3>
       <div class="row">
         <div class="six columns">
