Fix header items

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="container">
         <!-- Menu -->
         <nav class="khasak-nav">
-          <a class="khasak-item active" href="/index.html">Home</a>
+          <a class="khasak-item" href="/index.html">Home</a>
           <a class="khasak-item" href="#about">About</a>
           <a class="khasak-item" href="#organizers">Organizers</a>
           <a class="khasak-item" href="#cause">Cause</a>
@@ -51,8 +51,22 @@
         <h1>Khasakkinte Ithihasam</h1>
         <div class="row">
           <div class="twelve column left">            
-            <h2><span class="fs-2">A Theatre Adaptation <br>of OV Vijayan's Epic Novel</span><br /><span>by Deepan Sivaraman</span></h2>
-            <h2><span><b>May 6th-8th, 2016</b></span><br /><span>at Christ School (ICSE) Ground</span><br /><span>Behind Christ University</span><br /><span>Bengaluru</span></h2>
+            <h2>
+              <span class="fs-2">A Theatre Adaptation <br>of OV Vijayan's Epic Novel</span>
+              <br />
+              <span>by Deepan Sivaraman</span>
+            </h2>
+            <h2>
+              <span><b>May 6th-8th, 2016</b></span>
+              <br />
+              <span>at Christ School (ICSE)</span>
+              <br />
+              <span> Ground</span>
+              <br/>
+              <span>Behind Christ University</span>
+              <br />
+              <span>Bengaluru</span>
+            </h2>
           </div>
         </div>
         <a href="http://bit.ly/nammakhasak" class="button large rsvp">BOOK TICKET</a>
