Fix header items in presskit

--- a/presskit/index.html
+++ b/presskit/index.html
@@ -40,9 +40,23 @@
         <h3 class="tagline">NECAB &<br> Blue Ocean Theatre Presents</h3>
         <h1>Khasakkinte Ithihasam</h1>
         <div class="row">
-          <div class="twelve column left">            
-            <h2><span class="fs-2">A Theatre Adaptation <br>of OV Vijayan's Epic Novel</span><br /><span>by Deepan Sivaraman</span></h2>
-            <h2><span><b>May 6th-8th, 2016</b></span><br /><span>at Christ School Ground</span><br /><span>Bengaluru</span></h2>
+          <div class="twelve column left">
+            <h2>
+              <span class="fs-2">A Theatre Adaptation <br>of OV Vijayan's Epic Novel</span>
+              <br />
+              <span>by Deepan Sivaraman</span>
+            </h2>
+            <h2>
+              <span><b>May 6th-8th, 2016</b></span>
+              <br />
+              <span>at Christ School (ICSE)</span>
+              <br />
+              <span> Ground</span>
+              <br/>
+              <span>Behind Christ University</span>
+              <br />
+              <span>Bengaluru</span>
+            </h2>
           </div>
         </div>
         <a href="/" class="button large rsvp">HOME PAGE</a>
