Add related events.

--- a/index.html
+++ b/index.html
@@ -192,6 +192,24 @@
     </div>
 </div>
 
+<!--
+<div id="events" class="container">
+    <h3 class="o-section__title">Related Events</h3>
+    <div class="row">
+        <div class="twelve columns event-item">
+            <h6>23rd April / 11AM / Crossword, BTM Layout</h6>
+            <h4 class="u-title_head">Book Reading by Anita Nair</h4>
+            <p>
+            </p>
+        </div>
+        <div class="twelve columns event-item">
+            <h6>24th April / 6PM / ECA Hall, Indira Nagar</h6>
+            <h4 class="u-title_head">Book Reading by Subhash Chandran</h4>
+            <p></p>
+        </div>
+    </div>
+</div>
+-->
 <div id="cause" class="container">
     <h3 class="o-section__title">The Cause</h3>
     <p>NECAB and Blue Ocean Theatre aims to present an unparalleled theatre experience to the drama lovers of Bangalore
