Change related events style

--- a/index.html
+++ b/index.html
@@ -197,15 +197,30 @@
     <h3 class="o-section__title">Related Events</h3>
     <div class="row">
         <div class="twelve columns event-item">
-            <h6>23rd April / 11AM / Crossword, BTM Layout</h6>
+            <h6><b>23rd April</b> / 11AM / Crossword, BTM Layout</h6>
             <h4 class="u-title_head">Book Reading by Anita Nair</h4>
             <p>
+             Suspendisse bibendum justo nunc, at porttitor sem finibus
+             at. Suspendisse sit amet porttitor sem, eget pellentesque sem. Fusce
+              facilisis metus eu ornare condimentum. Nam ut felis bibendum,
+              dictum lectus et, mollis leo. Praesent imperdiet, urna ac ultrices
+               interdum, nulla eros mattis ipsum, non dictum neque quam a lacus.
+               Mauris quis elit malesuada, hendrerit felis eu, faucibus
+               nisl. Morbi facilisis eleifend feugiat.
             </p>
         </div>
         <div class="twelve columns event-item">
-            <h6>24th April / 6PM / ECA Hall, Indira Nagar</h6>
+            <h6><b>24th April</b> / 6PM / ECA Hall, Indira Nagar</h6>
             <h4 class="u-title_head">Book Reading by Subhash Chandran</h4>
-            <p></p>
+            <p>
+                         Suspendisse bibendum justo nunc, at porttitor sem finibus
+             at. Suspendisse sit amet porttitor sem, eget pellentesque sem. Fusce
+              facilisis metus eu ornare condimentum. Nam ut felis bibendum,
+              dictum lectus et, mollis leo. Praesent imperdiet, urna ac ultrices
+               interdum, nulla eros mattis ipsum, non dictum neque quam a lacus.
+               Mauris quis elit malesuada, hendrerit felis eu, faucibus
+               nisl. Morbi facilisis eleifend feugiat.
+            </p>
         </div>
     </div>
 </div>
