--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 Thasraak, a remote village in Palakkad where the author had spent a significant time. <br> Vijayan
                 juxtaposed myriad human experiences of bliss, fantasy, melancholy, poverty, disease, and death in
                 lyrical prose, without pontification or grandstanding—the reason why Khasak is still an epic in literary
-                history. khasak’s multilayered reality is also deeply philosophical - an imagery that provides unique
+                history. Khasak’s multilayered reality is also deeply philosophical - an imagery that provides unique
                 perspectives into religion, language, politics, and sex through its fascinating character sketches,
                 almost all of them drawn from the real-life characters that the author had met in Thasraak. <span
                         class="o-section__inset"><img src="./images/khasak-1.jpg" alt="" width="400px"/></span><br>
@@ -115,7 +115,7 @@
 
                 The theater is setup in an open-air arena on a large rectangular pit of loose earth with extensive use
                 of fire, soil, water, scent, sky , symbolic use of huge puppets and masks with real feel that allow
-                audience to participate and experience the pleasures and tragedies that engulf in "Khasakh". The vibrant
+                audience to participate and experience the pleasures and tragedies that engulf in "Khasak". The vibrant
                 scenographic experiences of this play bring back ancestors from the legend of Khasak with their
                 community atmosphere in a ritualistic and philosophical plane to tell their tales of celebration of
                 life, earth and myths. The director also perfectly knits the dramatic elements of Theyyam - an ancient
@@ -136,10 +136,10 @@
                     by its profound poetics, knitting of reality and myth, sarcasm, union of carnal desire and
                     existential torment, narrative brilliance, blending of the provincial vocabulary to the body the
                     novel and sublime weaving of sex, guilt and penance. <br> The novelty of the style and content in
-                    khasak altered the history of Malayalam literature forever and redefined the literary sensibilities
-                    of the average Malayalam reader. khasak walked the unconventional path of taking the reader through
+                    Khasak altered the history of Malayalam literature forever and redefined the literary sensibilities
+                    of the average Malayalam reader. Khasak walked the unconventional path of taking the reader through
                     a fascinating history and the existential crises of a people through the experiences of its
-                    protagonist, Ravi and the legends that surround the rural hamlet.<br> The stories that khasak weaves
+                    protagonist, Ravi and the legends that surround the rural hamlet.<br> The stories that Khasak weaves
                     together using the encounter of the spiritual with the scientific and the myths and superstitions
                     that form the history and the reality of the mystic village make it an experience that you want to
                     go through over and over again.
@@ -153,11 +153,11 @@
                     some of the notable productions have travelled to festivals such as Edinburgh, Avignon, Almeda,
                     ITFOK, BRM and META. He graduated from Central Saint Martin School of Art and Design, London, with a
                     specialization in scenography.<br>
-                    He taught scenography in at University of the Arts, London for six years and is presently an
-                    Associate Professor in Ambedkar University, Delhi. Deepan is the founding artistic director of
+                    He taught scenography at University of the Arts, London for six years and is presently an
+                    Associate Professor at Ambedkar University, Delhi. Deepan is the founding artistic director of
                     Oxygen Theatre Company based in Thrissur, Kerala. He is also currently associated with Performance
                     Studies Collective - a student initiated experimental theatre group based in Delhi. <br>
-                    Deepan has designed and directed more than more than 60 performances for various companies and
+                    Deepan has designed and directed more than 60 performances for various companies and
                     academic institutions in India and Europe. His notable works include Lord of the Flies (1997),
                     Kamala (2003), Spinal Cord (2009), Peer Gynt (2010), Ubu Roi (2012), Project Nostalgia (2013), Its
                     Cold in Here (2014), The cabinet of Dr Caligari (2015) and The Legends of Khasak (2015). He has also
@@ -185,7 +185,7 @@
             <img class="u-max-full-width" src="./images/org/BOT.png" alt="">
             <p>Blue Ocean is a startup theater group, launched by a group of acclaimed film and theater artists with a
                 common vision of offering fine quality theatre experience to the drama lovers around the world. As the
-                name indicates, Blue Ocean’s aim is to explore unchartered waters to deliver a fresh theatre going
+                name indicates, Blue Ocean’s aim is to explore uncharted waters to deliver a fresh theatre going
                 experience to the audience. Their philosophy is simple: If they enjoy making it, the audience will most
                 certainly enjoy watching it!</p>
         </div>
@@ -228,7 +228,7 @@
 <div id="cause" class="container">
     <h3 class="o-section__title">The Cause</h3>
     <p>NECAB and Blue Ocean Theatre aims to present an unparalleled theatre experience to the drama lovers of Bangalore
-        by hosting a classic play in the best possible manner and to raise a significant fund to fund the rehabilitation
+        by hosting a classic play in the best possible manner and to raise a significant amount to fund the rehabilitation
         of Endosulfan affected people of Kasaragod through ENVISAG and for NECAB’s Social Obligation Program that
         government schools in Bengaluru</p>
 </div>
