Cast and Crew: Basic draft

--- a/index.html
+++ b/index.html
@@ -273,6 +273,56 @@
 </div>
 
 
+<div id="cast" class="container">
+    <h3 class="o-section__title">The Cast</h3>
+    <ul>
+        <li><b>Ravi:</b> CK Sunil</li>
+        <li><b>Allappicha Mollakka:</b> CK Sudheer</li>
+        <li><b>Naijamali:</b> Rajeevan Vellur </li>
+        <li><b>Kuppu Achan:</b> Rajesh karyath</li>
+        <li><b>Appukkili:</b>  Dijesh Muttath</li>
+        <li><b>Sivaraman Nair:</b> PC Gopalakrishnan</li>
+        <li><b>Madhavan Nair:</b> Kumar</li>
+        <li><b>Mungam Kozhi:</b> Vijayan Akkalathu</li>
+        <li><b>Kuttappu Nari:</b> Lakshmanan Mandyathu</li>
+        <li><b>Kuttadan pooshari:</b> Manoj</li>
+        <li><b>Aliyar:</b> Shyamkumar</li>
+        <li><b>Inspector:</b> Krishnan Master</li>
+        <li><b>Thainakan:</b> Bhasksran Master</li>
+        <li>Sarath, Sukesh, Prasanth, Malavika, Parvathy,......</li>
+        <li><b>Maimoona:</b> Dr Tharima</li>
+        <li><b>Thithibiyumma:</b></li>
+        <li><b>Padma:</b> VK Balamani Teacher</li>
+        <li><b>Chandumma, Neeli:</b> Sreeja Vijayan</li>
+        <li><b>Abida:</b> Aswathy</li>
+        <li><b>Kunhamina:</b> Gana Vinod</li>
+        <li><b>Anuraj:</b> Muneer</li>
+        <li><b>Parvathy:</b> Chandumuthu</li>
+        <li><b>Malavika:</b> Suhara</li>
+        <li><b>Other roles:</b> Sarath, Sukesh and Prasanth</li>
+    </ul>
+</div>
+
+<div id="cast" class="container">
+    <h3 class="o-section__title">The Crew</h3>
+    <ul>
+        <li><b>Dramaturgy , Scenography and Direction :</b> Deepan Sivaraman</li>
+        <li><b>Producer :</b> K.M.K SMARAKA KALASAMITHI, TRIKARIPUR</li>
+        <li><b>Music :</b> Chandran Vayyattummal</li>
+        <li><b>Light :</b> Jose Koshi</li>
+        <li><b>Properties :</b> Anto George</li>
+        <li><b>Costume :</b> Aliyar Ali</li>
+        <li><b>Actor Trainer :</b> C.R.Rajan</li>
+        <li><b>Video Design:</b> Shiju Ishak & Ameer Ali</li>
+        <li><b>Animation :</b> Jagadheesh</li>
+        <li><b>Sound Execution :</b> Dileep</li>
+        <li><b>Tailoring :</b> Ragavan.P & Vimala</li>
+        <li><b>Carpentry :</b> Prashanth</li>
+        <li><b>Team Manager:</b> K.Chandran</li>
+        <li><b>Production Executive :</b> P.P.Raghunathan</li>
+    </ul>
+</div>
+
 <!-- Footer -->
 <div id="footer">
     <div class="container">
