Add events section contents

--- a/index.html
+++ b/index.html
@@ -192,39 +192,30 @@
     </div>
 </div>
 
-<!--
+
 <div id="events" class="container">
     <h3 class="o-section__title">Related Events</h3>
     <div class="row">
         <div class="twelve columns event-item">
-            <h6><b>23rd April</b> / 11AM / Crossword, BTM Layout</h6>
-            <h4 class="u-title_head">Book Reading by Anita Nair</h4>
+            <h6><b>24th April</b> / 4PM / ECA, Indiranagar</h6>
+            <h4 class="u-title_head">English and Malayalam book reading session with Dr. Rajan Gurukkal and Anita Nair</h4>
             <p>
-             Suspendisse bibendum justo nunc, at porttitor sem finibus
-             at. Suspendisse sit amet porttitor sem, eget pellentesque sem. Fusce
-              facilisis metus eu ornare condimentum. Nam ut felis bibendum,
-              dictum lectus et, mollis leo. Praesent imperdiet, urna ac ultrices
-               interdum, nulla eros mattis ipsum, non dictum neque quam a lacus.
-               Mauris quis elit malesuada, hendrerit felis eu, faucibus
-               nisl. Morbi facilisis eleifend feugiat.
+             Book reading session in Malayalam and English by Dr. Rajan Gurukkal and Anita Nair.
             </p>
         </div>
         <div class="twelve columns event-item">
-            <h6><b>24th April</b> / 6PM / ECA Hall, Indira Nagar</h6>
-            <h4 class="u-title_head">Book Reading by Subhash Chandran</h4>
-            <p>
-                         Suspendisse bibendum justo nunc, at porttitor sem finibus
-             at. Suspendisse sit amet porttitor sem, eget pellentesque sem. Fusce
-              facilisis metus eu ornare condimentum. Nam ut felis bibendum,
-              dictum lectus et, mollis leo. Praesent imperdiet, urna ac ultrices
-               interdum, nulla eros mattis ipsum, non dictum neque quam a lacus.
-               Mauris quis elit malesuada, hendrerit felis eu, faucibus
-               nisl. Morbi facilisis eleifend feugiat.
-            </p>
+            <h6><b>1st May</b> / 11AM / NUMA, Church Street</h6>
+            <h4 class="u-title_head">Exploring Khasak through an artists' eye</h4>
+            <p>Exploring Khasak through an artists' eye.. an artistic exploration by leading artists in Bangalore. Lead by Mr. Murali Cheroth.</p>
+        </div>
+        <div class="twelve columns event-item">
+            <h6><b>1st May</b> / 11AM / Rangoli Metro art, MG Road</h6>
+            <h4 class="u-title_head">English and Malayalam book reading session with Dr. Rajan Gurukkal and Anita Nair</h4>
+            <p>Book reading session in Malayalam and English by Dr. Rajan Gurukkal, Anita Nair and Joy Mathew.</p>
         </div>
     </div>
 </div>
--->
+
 <div id="cause" class="container">
     <h3 class="o-section__title">The Cause</h3>
     <p>NECAB and Blue Ocean Theatre aims to present an unparalleled theatre experience to the drama lovers of Bangalore
